<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <Button
        android:id="@+id/button"
        android:layout_width="225dp"
        android:layout_height="48dp"
        android:text="@string/click_here"
        android:layout_marginStart="152dp"
        android:layout_marginTop="84dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>

    <TextView
        android:id="@+id/textView"
        android:layout_width="182dp"
        android:layout_height="118dp"
        android:layout_marginTop="150dp"
        android:layout_marginEnd="157dp"
        android:layout_marginBottom="343dp"
        android:text=""
        android:textAppearance="@style/BoldRedText"
        app:layout_constraintBottom_toTopOf="@+id/button3"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/button"
        app:layout_constraintVertical_bias="0.0" />

    <Button
        android:id="@+id/button3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="193dp"
        android:layout_marginTop="541dp"
        android:layout_marginEnd="180dp"
        android:layout_marginBottom="34dp"
        android:text="@string/click_me_to_exit"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button"
        app:layout_constraintVertical_bias="0.25" />

    <EditText
        android:id="@+id/editText"
        android:layout_width="237dp"
        android:layout_height="86dp"
        android:layout_marginStart="120dp"
        android:layout_marginTop="168dp"
        android:layout_marginEnd="157dp"
        android:layout_marginBottom="42dp"
        android:autofillHints=""
        android:ems="10"
        android:hint="@string/enter_text_here"
        android:inputType="text"
        android:text="@string/name"
        app:layout_constraintBottom_toTopOf="@+id/button3"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView" />

    <Button
        android:id="@+id/button4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="62dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="261dp"
        android:layout_marginBottom="71dp"
        android:text="@string/button"
        app:layout_constraintBottom_toTopOf="@+id/editText"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView" />

    <Button
        android:id="@+id/button5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="25dp"
        android:layout_marginTop="18dp"
        android:layout_marginEnd="80dp"
        android:layout_marginBottom="25dp"
        android:text="@string/time"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/button3"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editText" />

    <EditText
        android:id="@+id/editText2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="69dp"
        android:layout_marginTop="14dp"
        android:layout_marginEnd="132dp"
        android:layout_marginBottom="13dp"
        android:ems="10"
        android:inputType="text"
        android:text="@string/enter_time"
        app:layout_constraintBottom_toTopOf="@+id/editText"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button4" />


</androidx.constraintlayout.widget.ConstraintLayout>
